--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "async-waterfall": "^0.1.5",
     "body-parser": "^1.15.0",
+    "csv-write-stream": "^2.0.0",
     "es6-promise": "^3.1.2",
     "express": "^4.13.4",
     "http-status": "0.1.8",
