--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-status": "0.1.8",
     "linebyline": "^1.3.0",
     "method-override": "^2.3.5",
+    "mkdirp": "^0.5.1",
     "mongoose": "^4.4.5",
     "morgan": "^1.7.0",
     "q": "^1.4.1",
