--- a/public/package.json
+++ b/public/package.json
@@ -10,9 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.5",
+    "angular-animate": "^1.5.6",
     "angular-route": "^1.5.5",
+    "angular-touch": "^1.5.6",
+    "angular-ui-bootstrap": "^1.3.3",
     "angular-ui-router": "^0.3.0",
     "bootstrap": "^3.3.6",
-    "moment": "^2.13.0"
+    "moment": "^2.13.0",
+    "rbsession": "^1.0.1"
   }
 }
