--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "q": "^1.4.1",
     "read-line": "^0.1.2",
     "request": "^2.70.0",
+    "socket.io": "^1.4.6",
     "underscore": "1.5.2"
   },
   "devDependencies": {
