--- a/public/package.json
+++ b/public/package.json
@@ -13,6 +13,7 @@
     "angular-animate": "^1.5.6",
     "angular-file-upload": "^2.3.4",
     "angular-route": "^1.5.5",
+    "angular-socket-io": "^0.7.0",
     "angular-touch": "^1.5.6",
     "angular-ui-bootstrap": "^1.3.3",
     "angular-ui-router": "^0.3.0",
