--- a/public/package.json
+++ b/public/package.json
@@ -18,9 +18,11 @@
     "angular-ui-bootstrap": "^1.3.3",
     "angular-ui-router": "^0.3.0",
     "bootstrap": "^3.3.6",
+    "jquery": "^3.0.0",
     "moment": "^2.13.0",
     "ng-file-upload": "^12.0.4",
     "q": "^1.4.1",
-    "rbsession": "^1.0.1"
+    "rbsession": "^1.0.1",
+    "underscore": "^1.8.3"
   }
 }
