--- a/public/package.json
+++ b/public/package.json
@@ -17,6 +17,7 @@
     "angular-touch": "^1.5.6",
     "angular-ui-bootstrap": "^1.3.3",
     "angular-ui-router": "^0.3.0",
+    "angular-xeditable": "^0.1.12",
     "bootstrap": "^3.3.6",
     "jquery": "^3.0.0",
     "moment": "^2.13.0",
