--- a/public/package.json
+++ b/public/package.json
@@ -19,7 +19,7 @@
     "angular-ui-router": "^0.3.0",
     "angular-xeditable": "^0.1.12",
     "bootstrap": "^3.3.6",
-    "jquery": "^3.0.0",
+    "jquery": "2.2.2",
     "moment": "^2.13.0",
     "ng-file-upload": "^12.0.4",
     "q": "^1.4.1",
