--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "csv-parse": "^1.1.1",
     "csv-parser": "^1.9.3",
     "csv-write-stream": "^2.0.0",
+    "deepmerge": "^0.2.10",
     "es6-promise": "^3.1.2",
     "express": "^4.13.4",
     "http-status": "0.1.8",
