--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "csv-parser": "^1.9.3",
     "csv-write-stream": "^2.0.0",
     "deepmerge": "^0.2.10",
+    "ejs": "^2.5.1",
     "es6-promise": "^3.1.2",
     "express": "^4.13.4",
     "http-status": "0.1.8",
