--- a/public/package.json
+++ b/public/package.json
@@ -22,8 +22,17 @@
     "jquery": "2.2.2",
     "moment": "^2.13.0",
     "ng-file-upload": "^12.0.4",
+    "path": "^0.12.7",
     "q": "^1.4.1",
     "rbsession": "^1.0.1",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
+    "html-loader": "^0.4.3",
+    "webpack": "^1.13.1"
   }
 }
